--- a/tinder/styles/globals.css
+++ b/tinder/styles/globals.css
@@ -22,6 +22,43 @@ a {
   color: inherit;
   text-decoration: none;
 }
+#divfile {
+  /* background-color: rgb(241, 23, 23); */
+  padding: 10px;
+  width: 200px;
+  height: 250px;
+  margin: auto;
+  position: relative;
+  border-style: solid;
+  border-width: 5px;
+}
+#inputTag,
+#inputTag2 {
+  position: absolute;
+  opacity: 0;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  top: 0px;
+
+  height: 100%;
+  width: 100%;
+}
+#imgupload,
+#imgupload2 {
+  position: absolute;
+
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  top: 0px;
+  height: 100%;
+}
+
+#img2,
+#img3 {
+  display: none;
+}
 
 @media (prefers-color-scheme: dark) {
   html {
