--- a/tinder/styles/globals.css
+++ b/tinder/styles/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+#__next {
+  height: 100%;
+  width: 100%;
+}
+
 html,
 body {
   max-width: 100vw;
@@ -24,7 +34,7 @@ a {
 }
 #divfile {
   /* background-color: rgb(241, 23, 23); */
-  padding: 10px;
+  /* padding: 10px; */
   width: 200px;
   height: 250px;
   margin: auto;
