--- a/tinder/components/multiRangeSlider.module.css
+++ b/tinder/components/multiRangeSlider.module.css
@@ -1,48 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-#__next {
-  height: 100%;
-  width: 100%;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-#divfile {
-  /* background-color: rgb(241, 23, 23); */
-  /* padding: 10px; */
-  width: 200px;
-  height: 250px;
-  margin: auto;
-  position: relative;
-  border-style: solid;
-  border-width: 5px;
-}
-
 .container {
   height: 100vh;
   display: flex;
@@ -109,11 +64,11 @@ a {
   outline: none;
 }
 
-.thumb--left {
+.thumb-left {
   z-index: 3;
 }
 
-.thumb--right {
+.thumb-right {
   z-index: 4;
 }
 
@@ -143,10 +98,4 @@ a {
   margin-top: 4px;
   pointer-events: all;
   position: relative;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
