adding artists and movies matches to home

--- a/tinder/pages/logged/home.module.css
+++ b/tinder/pages/logged/home.module.css
@@ -1,5 +1,6 @@
 .perspectiveBack {
-  transform: perspective(600px) translateZ(-0px);
+  /* transform: perspective(600px) translateZ(-0px); */
+  height: 300px;
 }
 
 .photoContainer {
