--- a/tinder/styles/globals.css
+++ b/tinder/styles/globals.css
@@ -167,6 +167,35 @@ a {
 .imagenstrong {
   text-shadow: 0px 0px 5px black, 0px 0px 6px black;
 }
+#icono {
+  animation: 1.5s ease 0s infinite pulse;
+}
+#imagenicono {
+  animation: 1.5s ease 0s infinite beat;
+}
+@keyframes beat {
+  0%,
+  50%,
+  100% {
+    transform: scale(1, 1);
+  }
+  30%,
+  80% {
+    transform: scale(0.92, 0.95);
+  }
+}
+
+@keyframes pulse {
+  0%,
+  50%,
+  100% {
+    background: rgb(19, 19, 19);
+  }
+  30%,
+  80% {
+    background: #0e0e0e;
+  }
+}
 
 @media (prefers-color-scheme: dark) {
   html {
