--- a/tinder/pages/logged/home.module.css
+++ b/tinder/pages/logged/home.module.css
@@ -5,13 +5,16 @@
 .photoContainer {
   height: calc(100vh - 240px);
 }
+
 .gradient {
   background: rgb(0, 0, 0);
-  z-index: 6;
   background: linear-gradient(
     0deg,
     rgba(0, 0, 0, 1) 0%,
-    rgba(0, 0, 0, 1) 5%,
-    rgba(0, 0, 0, 0) 34%
+    rgba(0, 0, 0, 0.6) 10%,
+    rgba(0, 0, 0, 0) 30%
   );
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
